--- a/test6/用例_学生列表.md
+++ b/test6/用例_学生列表.md
@@ -11,7 +11,7 @@
 |主流事件| |
 |备注| |
 
-## 2. 业务流程（顺序图） [源码](./src/sequence学生列表.puml)
+## 2. 业务流程（顺序图） [源码](./sequence学生列表.puml)
 ![sequence1](./sequence学生列表.png) 
 
 ## 3. 界面设计
