--- a/test6/用例_查看成绩.md
+++ b/test6/用例_查看成绩.md
@@ -11,7 +11,7 @@
 |主流事件| |
 |备注| |
 
-## 2. 业务流程（顺序图） [源码](./src/sequence查看成绩.puml)
+## 2. 业务流程（顺序图） [源码](./sequence查看成绩.puml)
 ![sequence2](./sequence查看成绩.png) 
 
 ## 3. 界面设计
