--- a/test6/用例_用户信息管理.md
+++ b/test6/用例_用户信息管理.md
@@ -11,7 +11,7 @@
 |主流事件| |
 |备注| |
 
-## 2. 业务流程（顺序图） [源码](./src/sequence评定成绩.puml)
+## 2. 业务流程（顺序图） [源码](./sequence评定成绩.puml)
 ![sequence5](./sequence用户信息管理.png) 
 
 ## 3. 界面设计
