--- a/test6/用例_登录.md
+++ b/test6/用例_登录.md
@@ -11,7 +11,7 @@
 |主流事件| |
 |备注| |
 
-## 2. 业务流程（顺序图） [源码](./src/sequence登录.puml)
+## 2. 业务流程（顺序图） [源码](/sequence登录.puml)
 ![sequence4](./sequence登录.png) 
 
 ## 3. 界面设计
