--- a/test6/用例_选课 .md
+++ b/test6/用例_选课 .md
@@ -11,7 +11,7 @@
 |主流事件| |
 |备注| |
 
-## 2. 业务流程（顺序图） [源码](./src/sequence选课.puml)
+## 2. 业务流程（顺序图） [源码](./sequence选课.puml)
 ![sequence4](./sequence选课.png) 
 
 ## 3. 界面设计
